# homework_28

./: README.md  pyproject.toml
ads/: models.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_image.py  0003_alter_ad_image.py  0004_alter_ad_options_alter_category_options.py  0005_alter_ad_options_alter_category_options.py
homework_28/: asgi.py  settings.py  urls.py  wsgi.py
info/: urls.py  views.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_options_alter_user_options_and_more.py  0003_alter_location_lat_alter_location_lng.py  0004_alter_location_options.py
